# gello

./: LICENSE  README.md
gello_DIGIT/: README.md  memo_KSH.sh
gello_HD/: .gitignore  README.md
gello_HD/experiments/: launch_nodes.py  run_env.py
gello_HD/gello/: env.py
gello_HD/gello/robots/delto_py/: pyproject.toml
gello_HD/gello/robots/delto_py/examples/: basic_connection.py
gello_HD/gello/robots/delto_py/src/dgsdk/: types.py
gello_HD/scripts/: Inspire_calibration.py  SJ_gelloData.py  SJ_inspire_baudrate_scan.py  SJ_inspire_test.py  SJ_quickcommand.md  simpleDataCheck.py
gello_JH/: README.md  __init__.py  requirements.txt
gello_JH/analysis/: __init__.py  phase0_analysis.py  phase1_analysis.py  phase2_analysis.py
gello_JH/calibration/: __init__.py
gello_JH/configs/: default_calibration.yaml  tesollo_dg5f.yaml
gello_JH/data/: __init__.py  sysid_finger_0225_202511.npz  two_finger_sin_j6_PIP_45deg_0.25Hz_0323_210046.npz  two_finger_sin_j6_PIP_45deg_0.50Hz_0323_210046.npz  two_finger_sin_j6_PIP_45deg_1.00Hz_0323_210046.npz  two_finger_sin_j6_PIP_45deg_2.00Hz_0323_210046.npz  two_finger_sin_j6_PIP_80deg_0.25Hz_0323_210046.npz  two_finger_sin_j6_PIP_80deg_0.50Hz_0323_210046.npz  two_finger_sin_j6_PIP_80deg_1.00Hz_0323_210046.npz  two_finger_sin_j6_PIP_80deg_2.00Hz_0323_210046.npz  two_finger_sin_j7_DIP_45deg_0.25Hz_0323_210046.npz  two_finger_sin_j7_DIP_45deg_0.50Hz_0323_210046.npz  two_finger_sin_j7_DIP_45deg_1.00Hz_0323_210046.npz  (+5 more)
gello_ft/: README.md
gello_nogripper/: ur_init.py
test/: digit_test.py  gripper_test.py  ur_test.py
(+6389 files in other folders)
