[project]
name = "dgsdk"
version = "1.7.2"
description = "Python wrapper for DGSDK - Delto Gripper SDK"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Tesollo", email = "info@tesollo.com" }
]
keywords = ["gripper", "robotics", "dgsdk", "delto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["cffi>=1.15.0"]

[project.urls]
Homepage = "https://github.com/tesollo/dgsdk-python"
Documentation = "https://github.com/tesollo/dgsdk-python#readme"
Repository = "https://github.com/tesollo/dgsdk-python.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dgsdk"]

[tool.hatch.build.targets.wheel.shared-data]
"libs" = "dgsdk/libs"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
